# optiwarc

./: COPYING  README.md  warccollres.py
gzmulti/: Makefile.in  configure  configure.ac
gzmulti/lib/: Makefile.am  Makefile.in  gzmulti.h  libgzmulti.c
warc/: __init__.py  arc.py  base.py  gzip2.py  utils.py  warc.py  warctool.py
warcrefs/: pom.xml
warcrefs/src/main/java/org/bibalex/warcrefs/: Deduplicator.java
warcsum/: Makefile.am  Makefile.in  configure  configure.ac  warcsum.c  warcsum.h
